- Added status bar to the overview page of case creation. - Squashed the name and appeal reference together so there is no longer a gap. - Changed horizontal rule to blue not grey as per the prototype.

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -5,6 +5,7 @@ $govuk-assets-path: '/assets/';
 
 @import "node_modules/govuk-frontend/govuk/all";
 @import "app/assets/sass/task-list";
+@import "app/assets/sass/_status-bar";
 
 .column--bordered {
   border-right: 3px solid #a1acb2;
@@ -20,4 +21,13 @@ $govuk-assets-path: '/assets/';
   cursor: pointer;
   font-family: "GDS Transport",Arial,sans-serif;
   font-size: 19px;
+}
+
+.divider {
+  border-bottom: 3px solid #005ea5;
+  margin-bottom: 2.5rem;
+}
+
+#appeal-details h2 {
+  margin-bottom: 0;
 }
